# asayake

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html  styles.css
.github/workflows/: build.yml  test.yml
asayake/src-tauri/: Cargo.toml  tauri.conf.json
src/: app.rs  main.rs  structs.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: icon.rs  img.rs  main.rs  structs.rs
src-tauri/src/icon/: hwnd.rs  shuffle.rs  win_icons.rs
src/app/: calc_layout.rs
