[package]
name = "asayake"
version = "0.1.0"
authors = ["satler-git <mitsclatw24@mbr.nifty.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.28" }
winput = "0.2.5"
sonic-rs = "0.3.9"
