[package]
name = "asayake-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.86"
serde_json = "1.0.122"
gloo-utils = "0.2.0"
yew = {version = "0.21.0", features = ["csr"]}
log = "0.4.22"
wasm-logger = "0.2.0"
gloo = "0.11.0"
fxhash = "0.2.1"
rand = "0.8.5"

[workspace]
members = ["src-tauri"]
