[package]
name = "asayake"
version = "0.0.0"
description = "A Tauri App"
authors = ["satler-git <mitsclatw24@mbr.nifty.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
anyhow = "1.0.86"
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.28" }
winput = "0.2.5"
sonic-rs = "0.3.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
