[package]
name = "asayake"
version = "0.0.0"
description = "A Tauri App"
authors = ["satler-git <mitsclatw24@mbr.nifty.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy_math = "0.14.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open"] }

anyhow = "1.0.86"
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.28" }
winput = "0.2.5"

sonic-rs = "0.3.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.121"

tokio = { version = "1", features = ["full"] }
itertools = "0.13.0"

# tauri plugins
tauri-plugin-positioner = "1.0"
base64 = "0.22.1"
image = "0.25.2"

widestring = "1.1.0"
fxhash = "0.2.1"
rand = "0.8.5"
thiserror = "1.0.63"

[dependencies.windows]
version = "0.54.0"
features = [
  "Win32",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
